--- a/main.html
+++ b/main.html
@@ -19,16 +19,16 @@
 		<input type="text" id="address" placeholder="Address">
 
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="checkbox">
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
     
 		<label for="multiselect">Please select your preferred breeds</label>
-		<select id="select">
+		<select id="multiselect">
 			<option>A</option>
 			<option>B</option>
 			<option>C</option>
 		</select>
 
-		<button type="submit">Submit</button>
+		<input type="submit" value="Submit">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
