--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
 		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
     
-		<label for="multiselect">Please select your preferred breeds</label>
-		<select id="multiselect">
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
 			<option>A</option>
 			<option>B</option>
 			<option>C</option>
