--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 			<option>C</option>
 		</select>
 
-		<input type="submit" value="Submit">
+		<button type="submit">Submit</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
