--- a/main.html
+++ b/main.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<form>
-		<label for="name">Name</label>
-		<input type="text" id="name" placeholder="Name">
+    <h1>Dog Adoption Application</h1>
+    <form>
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Name">
 
-		<label for="phone">Phone Number</label>
-		<input type="text" id="phone" placeholder="Phone Number">
+        <label for="phone">Phone Number</label>
+        <input type="text" id="phone" placeholder="Phone Number">
 
-		<label for="address">Address</label>
-		<input type="text" id="address" placeholder="Address">
+        <label for="address">Address</label>
+        <input type="text" id="address" placeholder="Address">
 
-		<label for="checkbox">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
-    
-		<label for="multiSelect">Please select your preferred breeds</label>
-		<select id="multiSelect">
-			<option>A</option>
-			<option>B</option>
-			<option>C</option>
-		</select>
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
+        <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
 
-		<button type="submit">Submit</button>
-		
-	</form>
-    <script type="text/javascript" src="./script.js">
-</script>
+        <label for="multiSelect">Please select your preferred breeds</label>
+        <select id="multiSelect" multiple>
+            <option>A</option>
+            <option>B</option>
+            <option>C</option>
+        </select>
 
+        <button type="submit">Submit</button>
+    </form>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
