--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Dog Adoption Application</h1>
-    <form>
+    <form method="post">
         <label for="name">Name</label>
         <input type="text" id="name" placeholder="Name">
 
