--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             <option>C</option>
         </select>
 
-        <button id="submit" type="submit">Submit</button>
+        <input type="submit" id="submit" value="Submit">
     </form>
     <script type="text/javascript" src="./script.js"></script>
 </body>
